# Bank-Management-System

./: .gitignore  README.md
Banking app/server/: app.py  pyproject.toml  requirements.txt
Banking app/server/instance/: config.py
Banking app/server/migrations/versions/: 57add944252d_init_tx_2.py  5db23e31b135_init_db.py  ce7bb07752af_init.py
Banking app/server/seed/: seed_accounts.py
Banking app/server/seed/data/: accounts.json
Banking app/server/src/: __init__.py
Banking app/server/src/backend/: .env  __init__.py
Banking app/server/src/backend/admin/: __init__.py
Banking app/server/src/backend/admin/api/: routes.py
Banking app/server/src/backend/admin/api/resources/: __init__.py  auth.py  dashboard.py
Banking app/server/src/backend/admin/helpers/: auth.py
Banking app/server/src/backend/admin/services/: __init__.py  auth_service.py  dashboard_service.py
Banking app/server/src/backend/models/: account.py  admin.py  disposition.py  guest.py  token_blocklist.py  transaction.py  user.py
Banking app/server/src/backend/user/api/: routes.py
Banking app/server/src/backend/user/api/resources/: __init__.py  (+3 more)
Banking app/server/src/backend/user/helpers/: __init__.py  account_helpers.py  bootstrap.py
Banking app/server/src/backend/user/services/: __init__.py  auth_service.py  email_service.py  handlers.py  messagebus.py  transaction_service.py
Banking app/server/tests/: test_admin_auth.py  test_admin_dashboard.py  test_user_email_service.py
Banking app/server/tests/mocks/: mock_SMTP.py  mock_SMTP_SSL.py  mock_SMTP_base.py  mock_id.py  mock_query.py
(+55 files in other folders)
